--- a/client/app/new-project/Q4/question.jade
+++ b/client/app/new-project/Q4/question.jade
@@ -51,6 +51,6 @@
             span LOCATION
             p.tr-title {{method.location}}
     .page-fade
-    footer.new-project-footer
+    footer.new-project-footer.fixed
       a.btn.btn-base(ui-sref="^.Q3") BACK
       button.btn.pull-right(type="submit", ng-class="{'btn-primary': $project.method}", ng-disabled="!$project.method") NEXT
