--- a/client/app/new-project/wizard/index.jade
+++ b/client/app/new-project/wizard/index.jade
@@ -134,6 +134,6 @@ header.header
             max-results-to-show="4")
 
     .page-fade
-    footer.new-project-footer
+    footer.new-project-footer.fixed
       a.btn.btn-base(ui-sref="^.Q4") BACK
       button.btn.pull-right(ng-class="{'btn-primary': NewProjectWizard.$valid}", ng-disabled="NewProjectWizard.$invalid", type="submit") NEXT
