--- a/client/app/new-project/Q2/question.jade
+++ b/client/app/new-project/Q2/question.jade
@@ -38,12 +38,8 @@
       .col.r-col: .related
         span.title RELATED RESEARCH
         ul.list-bullet
-          li XYZ Usability Study
-            span.date LAST UPDATED - 02/18/2016
-          li XYZ Usability Study
-            span.date LAST UPDATED - 02/18/2016
-          li XYZ Usability Study
-            span.date LAST UPDATED - 02/18/2016
+          li(ng-repeat="method in methods") {{method.title}}
+            span.date LAST UPDATED - {{method.updatedAt | date: 'MM/dd/yyyy'}}
     footer.new-project-footer
       .pull-left: a.btn.btn-outline(ui-sref="^.") BACK
       .pull-right: button.btn(ui-sref="^.Q3",
