--- a/client/app/new-project/Q3/question.jade
+++ b/client/app/new-project/Q3/question.jade
@@ -7,38 +7,34 @@
       .col.l-col: .phase-picker
         .input-group
           label(for="1")
-            input(type="radio", id="1", value="Planning, Scoping, and Definition", ng-model="$project.phase")
+            input(type="radio", id="1", value="Planning, Scoping, and Definition", ng-model="$project.phase", ng-click="setPhase(1)")
             span.title Planning, Scoping, and Definition
             span.description Exploring and defining the parameters of your project.
         .input-group
           label(for="2")
-            input(type="radio", id="2", value="Exploration, Synthesis, and Design Implications", ng-model="$project.phase")
+            input(type="radio", id="2", value="Exploration, Synthesis, and Design Implications", ng-model="$project.phase", ng-click="setPhase(2)")
             span.title Exploration, Synthesis, and Design Implications
             span.description Characterized by immersive research that leads to direct implications for designs.
         .input-group
           label(for="3")
-            input(type="radio", id="3", value="Concept Generation &amp; Early Prototyp", ng-model="$project.phase")
+            input(type="radio", id="3", value="Concept Generation & Early Prototype", ng-model="$project.phase", ng-click="setPhase(3)")
             span.title Concept Generation &amp; Early Prototype Iteration
             span.description This phase involves generative and participatory design activites.
         .input-group
           label(for="4")
-            input(type="radio", id="4", value="Evaluation, Refinement, and Production", ng-model="$project.phase")
+            input(type="radio", id="4", value="Evaluation, Refinement, and Production", ng-model="$project.phase", ng-click="setPhase(4)")
             span.title Evaluation, Refinement, and Production
             span.description Characterized by iterative testing and feedback.
         .input-group
           label(for="5")
-            input(type="radio", id="5", value="Launch &amp; Monitor", ng-model="$project.phase")
+            input(type="radio", id="5", value="Launch & Monitor", ng-model="$project.phase", ng-click="setPhase(5)")
             span.title Launch &amp; Monitor
             span.description Characterized by quality assurance testing to ensure readiness for market, and ongoing review and analysis to course-correct when necessary.
       .col.r-col: .related
         span.title RELATED RESEARCH
         ul.list-bullet
-          li XYZ Usability Study
-            span.date LAST UPDATED - 02/18/2016
-          li XYZ Usability Study
-            span.date LAST UPDATED - 02/18/2016
-          li XYZ Usability Study
-            span.date LAST UPDATED - 02/18/2016
+          li(ng-repeat="method in methods") {{method.title}}
+            span.date LAST UPDATED - {{method.updatedAt | date: 'MM/dd/yyyy'}}
     footer.new-project-footer
       .pull-left: a.btn.btn-outline(ui-sref="^.Q2") BACK
       .pull-right: button.btn(ui-sref="^.Q4", ng-class="{'btn-primary': $project.phase}", ng-disabled="!$project.phase", type="submit") NEXT
