--- a/client/email/share/style.css
+++ b/client/email/share/style.css
@@ -83,6 +83,11 @@ table.body-wrap .container {
   border: 1px solid #f0f0f0;
 }
 
+.quote {
+  background: #eeeeee;
+  border-radius: 4px;
+  padding: 10px;
+}
 
 /* -------------------------------------
     FOOTER
