--- a/client/assets/styles/_header.styl
+++ b/client/assets/styles/_header.styl
@@ -147,7 +147,7 @@
       .filter-track
         display block
         height 100%
-        overflow scroll
+        overflow auto
         width 100%
         .group
           width 0
